--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-height, initial-scale=1.0, 
 user-scalable=no">
-    <title>Emscripten-Generated Code</title>
+    <title>C-Calculator</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
